    (Mateusz Kocielski, Pierre)
  . Fixed memory leak on SQLite3Result and SQLite3Stmt when assigning to a
    reference. (Felipe)
  . Add SQlite3_Stmt::readonly() for checking if a statement is read only.
    (Scott)
  . Implemented FR #53466 (SQLite3Result::columnType() should return false after
    all of the rows have been fetched). (Scott)

- Streams:
  . Fixed bug #53913 (Streams functions assume HAVE_GLOB is defined). (Chris
    Jones)
  . Fixed bug #53903 (userspace stream stat callback does not separate the
    elements of the returned array before converting them). (Gustavo)
  . Implemented FR #26158 (open arbitrary file descriptor with fopen). (Gustavo)

- XSL extension:
  . Fixed memory leaked introduced by the NULL poisoning patch.
    (Mateusz Kocielski, Pierre)

- Zip extension:
  . Added the filename into the return value of stream_get_meta_data(). (Hannes)
  . Fixed bug #53923 (Zip functions assume HAVE_GLOB is defined). (Adam)
  . Fixed bug #53893 (Wrong return value for ZipArchive::extractTo()). (Pierre)
  . Fixed bug #53885 (ZipArchive segfault with FL_UNCHANGED on empty archive).
    (Stas, Maksymilian Arciemowicz). (CVE-2011-0421)
  . Fixed bug #53854 (Missing constants for compression type). (Richard, Adam)
  . Fixed bug #53603 (ZipArchive should quiet stat errors). (brad dot froehle at
    gmail dot com, Gustavo)
  . Fixed bug #53579 (stream_get_contents() segfaults on ziparchive streams).
    (Hannes)
  . Fixed bug #53568 (swapped memset arguments in struct initialization).
    (crrodriguez at opensuse dot org)
  . Fixed bug #53166 (Missing parameters in docs and reflection definition). 
    (Richard)
  . Fixed bug #49072 (feof never returns true for damaged file in zip).
    (Gustavo, Richard Quadling)

06 Jan 2011, PHP 5.3.5
- Fixed Bug #53632 (infinite loop with x87 fpu). (CVE-2010-4645) (Scott, 
  Rasmus)

09 Dec 2010, PHP 5.3.4
- Upgraded bundled Sqlite3 to version 3.7.3. (Ilia)
- Upgraded bundled PCRE to version 8.10. (Ilia)
